--- a/users.html
+++ b/users.html
@@ -13,24 +13,23 @@
       </button>
       
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-        <div class="offcanvas-header" style="background-color: #0948b3;">
-          <h5 class="offcanvas-title" id="offcanvasExampleLabel" style="color: white;">Usuario Administrador</h5>
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body " style="color: white;">
+        <div class="offcanvas-body">
+            <div>
+                Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+              </div>
               <div class="dropdown mt-3">
-                <button class="btn btn-secondary" type="button" style="background-color: #2e8f01;">
-                  Usuarios
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                  Dropdown button
                 </button>
-                <br>
-                <br>
-                <button class="btn btn-secondary" type="button" style="background-color: #adadad;">
-                  Bloquear
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                  Dropdown button
                 </button>
-                <br>
-                <br>
-                <button class="btn btn-secondary" type="button" style="background-color: #ff0000;">
-                  Cerrar Sesion
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                  Dropdown button
                 </button>
                 </ul>
               </div>
