--- a/index.html
+++ b/index.html
@@ -9,40 +9,49 @@
   
     <link href="styles.css" rel="stylesheet">
 </head>
-
 <body class="bg-primary.bg-gradient">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg" style="background-color: #0948b3;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#" style="color: white;"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link mx-2 active" aria-current="page" href="index.html" style="color: white;">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2" href="#" style="color: white;">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2" href="#" style="color: white;">Pedidos</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+            <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
+              Inicia sesión
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink" >
+              <form class="p-2" action="">
+                <label for="fname">Usuario:</label>
+                <br>
+                <input class="form-control" type="text" id="fname" name="fname">
+                <br>
+                <label for="lname">Contraseña:</label><br>
+                <input class="form-control" type="text" id="lname" name="lname">
+                <br>                
+                <a href="url">Registrar</a>
+                <br>
+                <br>
+                <input type="submit" class="btn btn-primary" value="Enviar">
+              </form> 
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
         </ul>
-        <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
-          Popover on bottom
-        </button>
       </div>
     </div>
-  </nav>
+  </nav>  
   <div id="carouselExample" class="carousel slide ">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -65,14 +74,6 @@
     </button>
   </div>
   <br>
-
-  <div class="container">
-    <h1>por difereede
-      <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Left popover">
-        Popover on left
-      </button>
-    </h1>
-  </div>
   <div class="container text-center">
     <div class="row align-items-start">
       <div class="col">
@@ -80,8 +81,8 @@
           <img src="../img/huawei.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Servidores Huawei</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <p class="card-text">Descubre la nueva gama de servidores Huawei de la serie RH 1200.</p>
+            <a href="#" class="btn btn-primary" style="background-color: #0948b3;">Modelos</a>
           </div>
         </div>
       </div>
@@ -90,8 +91,8 @@
           <img src="../img/dell.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Servidores Dell</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <p class="card-text">Descubre la nueva gama de servidores Dell PowerEdge de la serie R630</p>
+            <a href="#" class="btn btn-primary" style="background-color: #0948b3;">Modelos</a>
           </div>
         </div>
       </div>
@@ -100,8 +101,8 @@
           <img src="../img/hp.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Servidores HP</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <p class="card-text">Descubre la nueva gama de servidores HP Proliant de la serie DL360 G9</p>
+            <a href="#" class="btn btn-primary" style="background-color: #0948b3;">Modelos</a>
           </div>
         </div>
       </div>
@@ -109,68 +110,34 @@
   </div>
   <br>
 </body>
-<!-- Elimina la clase 'container' para que el footer ocupe todo el ancho -->
-<footer class="text-center text-lg-start text-white" style="background-color: #929fba; margin-bottom: 0;">
-  <!-- Grid container -->
+<footer class="text-center text-lg-start text-white" style="background-color: #0948b3; margin-bottom: 0;">
   <div class="container-fluid p-4 pb-0">
-    <!-- Section: Links -->
     <section>
-      <!-- Grid row -->
       <div class="row">
-        <!-- Grid column -->
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
-          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h6 class="text-uppercase mb-4 font-weight-bold">Servidores Passyed</h6>
+          <p>Proveedores oficiales desde 2008.</p>
         </div>
-        <!-- Grid column -->
-
         <hr class="w-100 clearfix d-md-none" />
-
-        <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
-          <p><a class="text-white">MDBootstrap</a></p>
-          <p><a class="text-white">MDWordPress</a></p>
-          <p><a class="text-white">BrandFlow</a></p>
-          <p><a class="text-white">Bootstrap Angular</a></p>
+          <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+          <p><a class="text-white">Servidores Huawei</a></p>
+          <p><a class="text-white">Servidores Dell</a></p>
+          <p><a class="text-white">Servidores HP</a></p>
         </div>
-        <!-- Grid column -->
-
         <hr class="w-100 clearfix d-md-none" />
-
-        <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-          <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-          <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-          <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+          <p><i class="fas fa-home mr-3"></i> Avenida Mar de Luz,15, Bajo, Madrid</p>
+          <p><i class="fas fa-phone mr-3"></i> + 34 234 567 881</p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
-          <!-- Social media buttons -->
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="fab fa-google"></i></a>
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
-          <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="fab fa-github"></i></a>
-        </div>
-        <!-- Grid column -->
       </div>
-      <!-- Grid row -->
     </section>
-    <!-- Section: Links -->
   </div>
-  <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-    © 2020 Copyright: <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  <div class="text-center p-3" style="background-color: #083074">
+    © 2024 Copyright: <a class="text-white" href="https://mdbootstrap.com/">Servidores Passyed</a>
   </div>
-  <!-- Copyright -->
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </html>
