--- a/dash.html
+++ b/dash.html
@@ -19,9 +19,11 @@
         </div>
         <div class="offcanvas-body " style="color: white;">
               <div class="dropdown mt-3">
-                <button class="btn btn-secondary" type="button" style="background-color: #2e8f01;">
-                  Usuarios
-                </button>
+                <a href="panel.html">
+                  <button class="btn btn-secondary" type="button" style="background-color: #2e8f01;">
+                    Pedidos
+                  </button>
+                </a>                
                 <br>
                 <br>
                 <button class="btn btn-secondary" type="button" style="background-color: #adadad;">
