--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
                 <br>
                 <br>
-                <input type="submit" class="btn btn-primary" value="Enviar">
+                <input type="button" class="btn btn-primary" value="Enviar" onclick="window.location.href='panel.html'">
               </form> 
             </ul>
           </li>
@@ -73,13 +73,13 @@
   <div id="carouselExample" class="carousel slide ">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../img/datacenter1.jpg" height="500px" class="d-block w-100" alt="...">
+        <img src="img/datacenter1.jpg" height="500px" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/datacenter2.jpg" height="500px" class="d-block w-100" alt="...">
+        <img src="img/datacenter2.jpg" height="500px" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../img/datacenter3.jpg" height="500px"  class="d-block w-100" alt="...">
+        <img src="img/datacenter3.jpg" height="500px"  class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -96,7 +96,7 @@
     <div class="row align-items-start">
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="../img/huawei.jpg" class="card-img-top" alt="...">
+          <img src="img/huawei.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Servidores Huawei</h5>
             <p class="card-text">Descubre la nueva gama de servidores Huawei de la serie RH 1200.</p>
@@ -106,7 +106,7 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="../img/dell.png" class="card-img-top" alt="...">
+          <img src="img/dell.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Servidores Dell</h5>
             <p class="card-text">Descubre la nueva gama de servidores Dell PowerEdge de la serie R630</p>
@@ -116,7 +116,7 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="../img/hp.png" class="card-img-top" alt="...">
+          <img src="img/hp.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Servidores HP</h5>
             <p class="card-text">Descubre la nueva gama de servidores HP Proliant de la serie DL360 G9</p>
